namespace PeerEvalAppAPI.Core.Enums
{
    public enum UserRole
    {
        Admin,
        User
    }
}
